Visible error messagebox on fatal loading errors

BUG: 346792
REVIEW: 123535